--- a/moneytextview/build.gradle
+++ b/moneytextview/build.gradle
@@ -1,11 +1,14 @@
-apply plugin: 'com.android.application'
+
+apply plugin: 'com.android.library'
+
+
+
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24"
 
     defaultConfig {
-        applicationId "org.fabiomsr.moneytextview.example"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -21,8 +24,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
 
-    compile project(':library')
 }
+
+apply from: 'publish/config.gradle'
+apply from: 'publish/install.gradle'
+apply from: 'publish/bintray.gradle'
